--- a/src/features/notes/NoteButtons/NoteButtons.module.css
+++ b/src/features/notes/NoteButtons/NoteButtons.module.css
@@ -3,4 +3,5 @@
     justify-content: center;
     align-items: center;
     gap: 4px;
+    flex-wrap: wrap;
 }
